# ha-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
ha_mcp/: __init__.py  client.py  server.py
ha_mcp/tools/: __init__.py  addons.py  automations.py  dashboards.py  entities.py  helpers.py  logs.py  notifications.py  registry.py  system.py
tests/: __init__.py  conftest.py  test_addons.py  test_automations.py  test_client.py  test_dashboards.py  test_entities.py  test_helpers.py  test_logs.py  test_notifications.py  test_registry.py  test_server.py  test_system.py
