[project]
name = "ha-mcp-server"
version = "0.0.8"
description = "MCP server for Home Assistant. Full control over entities, dashboards, add-ons, logs, automations and more"
license = { file = "LICENSE" }
authors = [
    { name = "Claudio Borges", email = "but3k4@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.15.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ha_mcp"]

[project.scripts]
ha-mcp = "ha_mcp.server:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=ha_mcp --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["ha_mcp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "D"]
ignore = ["ANN401", "D202", "D107", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D200", "D205"]
