[project]
name = "ha-mcp-server"
version = "0.0.8"
description = "MCP server for Home Assistant. Full control over entities, dashboards, add-ons, logs, automations and more"
license = { file = "LICENSE" }
authors = [
    { name = "Claudio Borges", email = "but3k4@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20",
    "ruff>=0.15.9",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "aioresponses>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ha_mcp"]

[project.scripts]
ha-mcp = "ha_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=ha_mcp --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["ha_mcp"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
